After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708445 - docs: missing text in GSourceCallbackFuncs docs
docs: missing text in GSourceCallbackFuncs docs
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-09-20 10:30 UTC by Dieter Verfaillie
Modified: 2013-09-20 19:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
docs: fix GSourceFuncs docs (2.23 KB, patch)
2013-09-20 10:30 UTC, Dieter Verfaillie
committed Details | Review

Description Dieter Verfaillie 2013-09-20 10:30:20 UTC
Created attachment 255377 [details] [review]
docs: fix GSourceFuncs docs

Reported by Zoltan Boszormenyi (https://mail.gnome.org/archives/gtk-devel-list/2013-September/msg00054.html)

Attached patch fixes this.
Comment 1 Emmanuele Bassi (:ebassi) 2013-09-20 11:02:57 UTC
Review of attachment 255377 [details] [review]:

I thought gtk-doc had already been fixed...

anyway, looks good.
Comment 2 Bernhard Schuster 2013-09-20 14:39:50 UTC
Root cause: https://bugzilla.gnome.org/show_bug.cgi?id=678094
Comment 3 Dieter Verfaillie 2013-09-20 19:13:41 UTC
Comment on attachment 255377 [details] [review]
docs: fix GSourceFuncs docs

Committed to master with a fixed commit message (point to this bug report and mention GSourceFuncs instead of GSourceCallbackFuncs).
Comment 4 Dieter Verfaillie 2013-09-20 19:19:54 UTC
(In reply to comment #1)
> Review of attachment 255377 [details] [review]:
> 
> I thought gtk-doc had already been fixed...
> 
> anyway, looks good.

Thanks you for the review :)

(In reply to comment #2)
> Root cause: https://bugzilla.gnome.org/show_bug.cgi?id=678094

Thanks for pointing this out. I've been re-writing the GTK-Doc
parser used in the  gobject-introspection project (should land
in the beginning of the 3.11 cycle in a couple of weeks) and have
fixed a similar defect in there a long time ago. I'll try to
contact Stefan to see if he's interested in fixing it in the
same way for GTK-Doc.